--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.4.22.Final</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.21</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
